--- a/appstate.json
+++ b/appstate.json
@@ -1,7 +1,92 @@
-....
-
-
-        𝐚dd 𝐲𝐨𝐮𝐫 𝐜𝟑𝐜 𝐅𝐛𝐬𝐭𝐚𝐭𝐞 𝐜𝐨𝐨𝐤𝐢𝐞 🍪
-
-
-.....
+[
+    {
+        "key": "datr",
+        "value": "CUPJaOf3kd2C1oueY9XAWrjh",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-16T11:13:30.616Z",
+        "lastAccessed": "2025-09-16T11:13:30.616Z"
+    },
+    {
+        "key": "sb",
+        "value": "CUPJaBdds16MwH_Ws2fYJyZH",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-16T11:13:30.616Z",
+        "lastAccessed": "2025-09-16T11:13:30.616Z"
+    },
+    {
+        "key": "c_user",
+        "value": "100054901370506",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-16T11:13:30.616Z",
+        "lastAccessed": "2025-09-16T11:13:30.616Z"
+    },
+    {
+        "key": "xs",
+        "value": "27%3AuRX3Uq_ZbPgfAg%3A2%3A1758020439%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-16T11:13:30.616Z",
+        "lastAccessed": "2025-09-16T11:13:30.616Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_US",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-16T11:13:30.616Z",
+        "lastAccessed": "2025-09-16T11:13:30.616Z"
+    },
+    {
+        "key": "pas",
+        "value": "100054901370506%3AktKhQwDBD9",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-16T11:13:30.616Z",
+        "lastAccessed": "2025-09-16T11:13:30.616Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B946x480x1.2753221988677979",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-16T11:13:30.616Z",
+        "lastAccessed": "2025-09-16T11:13:30.616Z"
+    },
+    {
+        "key": "fr",
+        "value": "04fXcsz1f3Wmgg3y3.AWePmkEJ5AX1jRfb9NLHcVsYFotUxioMoBBL8cUqehqP_4CfPsg.BoyUMJ..AAA.0.0.BoyUZR.AWf7t7pHeUZDvsx9CgVhVeIeLVc",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-16T11:13:30.616Z",
+        "lastAccessed": "2025-09-16T11:13:30.616Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2924%3Btimestamp%3A1758021201",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-16T11:13:30.616Z",
+        "lastAccessed": "2025-09-16T11:13:30.616Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "100633505%3BT%3A29300353",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-16T11:13:30.616Z",
+        "lastAccessed": "2025-09-16T11:13:30.616Z"
+    }
+]
